[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/SkillGem.glb" type="PackedScene" id=1]
[ext_resource path="res://Actors/SkillGem.gd" type="Script" id=2]
[ext_resource path="res://Resources/UiState.tres" type="Resource" id=3]
[ext_resource path="res://Resources/PlayerEvents.tres" type="Resource" id=4]
[ext_resource path="res://Resources/Skills/Beam1.tres" type="Resource" id=5]
[ext_resource path="res://Resources/Skills/Beam0.tres" type="Resource" id=6]
[ext_resource path="res://Resources/Skills/Beam2.tres" type="Resource" id=7]
[ext_resource path="res://Resources/Skills/Run0.tres" type="Resource" id=8]
[ext_resource path="res://Resources/Skills/Run1.tres" type="Resource" id=9]
[ext_resource path="res://Resources/Skills/Run2.tres" type="Resource" id=10]
[ext_resource path="res://Resources/Skills/Dash1.tres" type="Resource" id=11]
[ext_resource path="res://Resources/Skills/Dash2.tres" type="Resource" id=12]
[ext_resource path="res://Resources/Skills/Dash0.tres" type="Resource" id=13]
[ext_resource path="res://Resources/Skills/Reject2.tres" type="Resource" id=14]
[ext_resource path="res://Resources/Skills/Reject1.tres" type="Resource" id=15]
[ext_resource path="res://Resources/Skills/Reject0.tres" type="Resource" id=16]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("SkillGem:translation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("SkillGem:translation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.692079, -0.25, 0, 0.25, 0, 0.62125, -0.25, 0, 0.25, 0, 0.692079, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("SkillGem:translation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("SkillGem:translation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("SkillGem:translation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.692079, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("SkillGem:translation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("SkillGem:scale:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0.6, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("SkillGem:scale:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0.6, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("SkillGem:scale:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0.6, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("SpotLight:light_energy")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=4]
resource_name = "Spawn"
length = 0.6
tracks/0/type = "bezier"
tracks/0/path = NodePath("SkillGem:translation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 0.6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("SkillGem:translation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -0.144272, -0.25, 0, 0.25, 0, 0.743322, -0.2, -0.0220813, 0.075, -0.00587851, 0.688456, -0.1, 0.0228304, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 0.6 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("SkillGem:translation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 0.6 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("SkillGem:scale:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0.0576493, -0.25, 0, 0.25, 0, 0.6, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("SkillGem:scale:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0.0576493, -0.25, 0, 0.25, 0, 0.6, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("SkillGem:scale:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0.0576493, -0.25, 0, 0.25, 0, 0.6, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("SpotLight:light_energy")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 2.4, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}

[sub_resource type="CylinderShape" id=2]
height = 2.98786

[node name="SkillGem" type="Spatial"]
script = ExtResource( 2 )
player_info = ExtResource( 4 )
ui_state = ExtResource( 3 )
beam_upgrades = [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 7 ) ]
reject_upgrades = [ ExtResource( 16 ), ExtResource( 15 ), ExtResource( 14 ) ]
run_upgrades = [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ]
dash_upgrades = [ ExtResource( 13 ), ExtResource( 11 ), ExtResource( 12 ) ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Spawn"
anims/Idle = SubResource( 1 )
anims/RESET = SubResource( 3 )
anims/Spawn = SubResource( 4 )

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 5.27287, 0 )
light_energy = 0.0
spot_range = 6.00317
spot_angle = 25.9593

[node name="SkillGem" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 0.692079, 0 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.126026, 0 )

[node name="CollectionArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="CollectionArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.51519, 0 )
shape = SubResource( 2 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="CollectionArea" to="." method="_on_CollectionArea_body_entered"]
